--- a/EcommerceAPI/appsettings.json
+++ b/EcommerceAPI/appsettings.json
@@ -7,6 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-   "EcommerceDb": "Data Source=.;Initial Catalog=EcommerceDb;Integrated Security=True;Trust Server Certificate=True"
+    "EcommerceDb": "Data Source=.;Initial Catalog=EcommerceDb;Integrated Security=True;Trust Server Certificate=True"
+  },
+  "JWT": {
+    "ValidAudience": "User",
+    "ValidIssure": "http://localhost:5072",
+    "Secret": "ikuhygd548fbxcgd863nx0984n8kd8kdhofndnfjd"
   }
 }
